convert to rems

--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -1,7 +1,7 @@
 .container-outer {
   --outer-container-column: 8.5vw;
-  --min: calc(375px - 2 * (var(--outer-container-column)));
-  max-width: 1440px;
+  --min: calc(23.4375rem - 2 * (var(--outer-container-column)));
+  max-width: 90rem;
   margin: 0 auto;
 
   display: grid;
