--- a/main/assets/css/custom-style/_colors.scss
+++ b/main/assets/css/custom-style/_colors.scss
@@ -19,6 +19,7 @@
   @include defineColorHSL(--color-accent-lighter, 349, 75%, 67%);
 
   @include defineColorHSL(--color-black, 240, 8%, 12%);
+  @include defineColorHSL(--color-black-medium, 240, 23%, 94%);
   @include defineColorHSL(--color-black-light, 224, 17%, 82%);
   @include defineColorHSL(--color-black-lighter, 230, 21%, 95%);
   @include defineColorHSL(--color-white, 0, 0%, 100%);
