--- a/main/assets/css/custom-style/_typography.scss
+++ b/main/assets/css/custom-style/_typography.scss
@@ -70,9 +70,17 @@ h1, h2, h3, h4 {
 // (END) Global editor code
 
 // --------------------------------
+.display {
+  color: var(--color-black-medium);
+  font-size: 7.5rem;
+  letter-spacing: -3px;
 
-// link style
-a, .link {}
+  @include breakpoint(md) {
+    font-size: 12.5rem;
+    letter-spacing: -5px;
+  }
+}
+
 
 mark {
   background-color: alpha(var(--color-accent), 0.2);
