--- a/main/assets/css/pages/_home.scss
+++ b/main/assets/css/pages/_home.scss
@@ -1,7 +1,7 @@
 // HEADER SLIDES
 
 header {
-  margin-top: var(--nav-bar-height);
+  margin-top: var(--nav-bar-height); //move down the header for the navigation fixed nav bar in mobile
 }
 
 .hero {
@@ -25,7 +25,7 @@ header {
 
   &__content {
     height: 21.25rem;
-    display: grid; //use grid so the spacing for slides with more text matches the design
+    display: grid; //use grid so the spacing for slide content with more text matches the design
     justify-items: start;
     color: var(--color-white);
 
@@ -36,7 +36,7 @@ header {
 }
 
 .slide-nav {
-  display: none;
+  display: none; //hide the slide nav on mobile devices
 }
 
 @include breakpoint(sm) {
@@ -50,7 +50,7 @@ header {
     padding: var(--slide-padding-y) 3.3rem;
 
     .slide__content {
-      height: 22.5625rem; //height is the same for tablet and desktop
+      height: 22.5625rem; //keep height the same for tablet and desktop
     }
   }
 }
