code to use container for welcome section

--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -20,3 +20,17 @@
 }
 
 
+
+.container {
+  h1,
+  h2 {
+    max-width: 9ch;
+  }
+
+  @include breakpoint(md) {
+    --component-padding: 11.875rem  !important;
+    p {
+      max-width: 28rem;
+    }
+  }
+}
