--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7235,9 +7235,11 @@ Usage: codyhouse.co/license
 
 .nav-bar {
   height: var(--nav-bar-height);
+  background: var(--color-white);
   position: fixed;
-  width: calc(100% - 2 * var(--outer-container-column));
-  left: var(--outer-container-column);
+  width: 100%;
+  left: 0;
+  padding: 0 var(--outer-container-column);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -7248,14 +7250,15 @@ Usage: codyhouse.co/license
   .nav-bar + .overlay {
     top: var(--nav-bar-height);
     opacity: 0;
-    visibility: hidden; }
+    visibility: hidden;
+    z-index: 0; }
 
 .nav {
   background: var(--color-black-lighter);
-  padding: 48px;
+  padding: 3rem;
   position: absolute;
-  right: calc(-1.2 * var(--outer-container-column));
-  left: 0;
+  right: 0;
+  left: var(--outer-container-column);
   top: var(--nav-bar-height);
   transform: translateX(100%);
   display: grid;
@@ -7264,8 +7267,8 @@ Usage: codyhouse.co/license
   opacity: 1; }
 
 .nav-icon {
-  width: 24px;
-  height: 17px;
+  width: 1.5rem;
+  height: 1.0625rem;
   background: url(../images/icons/icon-hamburger.svg) no-repeat;
   -webkit-animation: rotate1 1s;
           animation: rotate1 1s; }
@@ -7325,8 +7328,8 @@ Usage: codyhouse.co/license
   .nav {
     position: static; }
   .nav-bar {
-    width: 100%;
-    justify-content: start; }
+    justify-content: start;
+    padding: 0; }
     .nav-bar__logo {
       height: 40px; }
   .nav {
