--- a/main/assets/css/pages/_home.scss
+++ b/main/assets/css/pages/_home.scss
@@ -3,7 +3,7 @@
   --max-paragraph-width: 28rem;
 }
 
-// HEADER SLIDES
+// HEADER
 
 header {
   margin-top: var(--nav-bar-height); //move down the header for the navigation fixed nav bar in mobile
@@ -12,6 +12,9 @@ header {
 .hero {
   position: relative;
 }
+
+
+// SLIDES
 
 .slide {
   padding: 6.875rem 0;
@@ -121,9 +124,9 @@ main.home {
   .horizontal-line {
     position: absolute;
     height: 1px;
-    width: 65px;
+    width: 4.125rem;
     background-color: var(--color-black-light);
-    top: -68px;
+    top: -4.25rem;
     left: 0;
   }
 
@@ -143,7 +146,7 @@ main.home {
     h1 {
       display: block;
       position: absolute;
-      top: -85px;
+      top: -5.375rem;
     }
 
     .text-component {
@@ -156,7 +159,7 @@ main.home {
     background-position: right center;
 
     .text-component {
-      padding-top: 72px;
+      padding-top: 4.5rem;
     }
   }
 }
