--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7123,9 +7123,9 @@ main.home {
   .welcome .horizontal-line {
     position: absolute;
     height: 1px;
-    width: 65px;
+    width: 4.125rem;
     background-color: var(--color-black-light);
-    top: -68px;
+    top: -4.25rem;
     left: 0; }
   .welcome .text-component {
     --text-vspace-multiplier: 2.5; }
@@ -7137,7 +7137,7 @@ main.home {
     .welcome h1 {
       display: block;
       position: absolute;
-      top: -85px; }
+      top: -5.375rem; }
     .welcome .text-component {
       padding-top: 3rem; } }
   @media (min-width: 64rem) {
@@ -7145,7 +7145,7 @@ main.home {
       background: url(../images/home/desktop/image-welcome.jpg) no-repeat;
       background-position: right center; }
       .welcome .text-component {
-        padding-top: 72px; } }
+        padding-top: 4.5rem; } }
 
 /* -------------------------------- 
 
