--- a/main/assets/css/pages/_home.scss
+++ b/main/assets/css/pages/_home.scss
@@ -178,3 +178,31 @@ main.home {
 
 // TEAMS SECTION
 
+.teams {
+  --bg-image: url(../images/home/mobile/image-small-team.jpg);
+  background: var(--bg-image) no-repeat;
+  background-size: cover;
+  color: var(--color-white);
+
+  &__content {
+    padding: 11.25rem 0;
+  }
+
+
+  @include breakpoint(sm) {
+    --bg-image: url(../images/home/tablet/image-small-team.jpg);
+
+    &__content {
+      padding: 10.5rem 0;
+    }
+
+   .text-component {
+      --text-vspace-multiplier: 3;
+    }
+  }
+
+  @include breakpoint(md) {
+    --bg-image: url(../images/home/desktop/image-small-team.jpg);
+  }
+
+}
