--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -6829,20 +6829,20 @@ html:not(.js) .no-js\:is-hidden {
     .container-outer {
       --outer-container-column: MIN(10.3125rem, 11.45vw); } }
 
-.container h1,
-.container h2,
-.container h3 {
-  max-width: 9ch; }
-
-@media (min-width: 48rem) {
-  .container {
-    --component-padding: 3.3rem; } }
-
-@media (min-width: 64rem) {
-  .container {
-    --component-padding: 11.875rem  !important; }
-    .container p {
-      max-width: 28rem; } }
+.container {
+  --component-padding: var(--outer-container-column); }
+  .container h1,
+  .container h2,
+  .container h3 {
+    max-width: 9ch; }
+  @media (min-width: 48rem) {
+    .container {
+      --component-padding: 3.3rem; } }
+  @media (min-width: 64rem) {
+    .container {
+      --component-padding: 11.875rem  !important; }
+      .container p {
+        max-width: 28rem; } }
 
 :root {
   --font-primary: 'Spartan', sans-serif;
@@ -7111,14 +7111,14 @@ header {
 
 main.home {
   --section-spacer: 12.5rem; }
-  main.home > :first-child {
+  main.home .container-outer > :first-child {
     margin-top: 8.75rem; }
-  main.home > * {
+  main.home .container-outer > * {
     margin-bottom: 6rem; }
   @media (min-width: 48rem) {
-    main.home > :first-child {
+    main.home .container-outer > :first-child {
       margin-top: var(--section-spacer); }
-    main.home > * {
+    main.home .container-outer > * {
       margin-bottom: var(--section-spacer); } }
 
 .welcome {
@@ -7167,16 +7167,18 @@ main.home {
   color: var(--color-white); }
   .teams__content {
     padding: 11.25rem 0; }
+  .teams .text-component {
+    --text-vspace-multiplier: 5; }
   @media (min-width: 48rem) {
     .teams {
       --bg-image: url(../images/home/tablet/image-small-team.jpg); }
       .teams__content {
-        padding: 10.5rem 0; }
-      .teams .text-component {
-        --text-vspace-multiplier: 3; } }
+        padding: 10.5rem 0; } }
   @media (min-width: 64rem) {
     .teams {
-      --bg-image: url(../images/home/desktop/image-small-team.jpg); } }
+      --bg-image: url(../images/home/desktop/image-small-team.jpg); }
+      .teams .text-component {
+        --text-vspace-multiplier: 3; } }
 
 /* -------------------------------- 
 
