--- a/main/assets/css/components/_vertical_text.scss
+++ b/main/assets/css/components/_vertical_text.scss
@@ -1,9 +1,8 @@
 .vertical-content {
-  display: none;
 
   @include breakpoint(sm) {
-    grid-column: 1 / 2;
-    grid-row: 1 / span 2;
+    grid-column: 1;
+    grid-row: span 2;
 
    display: grid;
     justify-items: center;
