--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7357,26 +7357,24 @@ Usage: codyhouse.co/license
     opacity: 1;
     transform: translateX(0%); } }
 
-.vertical-content {
-  display: none; }
-  @media (min-width: 48rem) {
-    .vertical-content {
-      grid-column: 1 / 2;
-      grid-row: 1 / span 2;
-      display: grid;
-      justify-items: center;
-      grid-template-rows: -webkit-min-content auto;
-      grid-template-rows: min-content auto;
-      gap: 3rem; }
-      .vertical-content__line {
-        height: 104px;
-        width: 1px;
-        background: var(--color-black-light); }
-      .vertical-content__text {
-        -ms-writing-mode: tb-lr;
-            writing-mode: vertical-lr;
-        align-self: start;
-        letter-spacing: 15px;
-        color: var(--color-black-light); } }
+@media (min-width: 48rem) {
+  .vertical-content {
+    grid-column: 1;
+    grid-row: span 2;
+    display: grid;
+    justify-items: center;
+    grid-template-rows: -webkit-min-content auto;
+    grid-template-rows: min-content auto;
+    gap: 3rem; }
+    .vertical-content__line {
+      height: 104px;
+      width: 1px;
+      background: var(--color-black-light); }
+    .vertical-content__text {
+      -ms-writing-mode: tb-lr;
+          writing-mode: vertical-lr;
+      align-self: start;
+      letter-spacing: 15px;
+      color: var(--color-black-light); } }
 
 /*! purgecss end ignore */
