use container-width utility class

--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -33,7 +33,7 @@
   }
 
   @include breakpoint(md) {
-    --component-padding: 11.875rem  !important;
+    --component-padding: 11.875rem;
 
     p {
       max-width: 28rem;
