--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -6890,13 +6890,13 @@ h1 {
     h1 {
       font-size: 5rem; } }
 
-.huge {
+.text--huge {
   color: var(--color-black-medium);
   font-size: 7.5rem;
   letter-spacing: -3px; }
   @media (min-width: 64rem) {
-    .huge {
-      font-size: 12.5rem;
+    .text--huge {
+      font-size: MIN(16vw, 12.5rem);
       letter-spacing: -5px; } }
 
 mark {
